--- a/style.css
+++ b/style.css
@@ -1,37 +1,50 @@
 /* style.scss */
 body {
-  font: "Lucida Grande","Ubuntu","Droid Sans","Segoe UI",Segoe,sans-serif;
+  font-family: Georgia,"Ubuntu","Droid Sans","Segoe UI",Segoe,sans-serif;
   margin: 0px;
   padding: 0px;
-  width: 100%;
-  background: url("stucco.png"); }
+  width: 100%; 
+  text-align:center;
+}
   body #wrapper {
-    padding-bottom: 30px;
+    padding-bottom: 5px;
     min-height: 100%;
     background: white;
     width: 960px;
     margin: 0 auto;
     box-shadow: 6px 0px 10px -7px #888888, -6px 0px 10px -7px #888888; }
+
     body #wrapper div#helptext {
-      padding: 2px 20px; }
+      padding: 18px 10px;
+border-top: 4px double #CCC;
+border-bottom: 4px double #CCC;
+margin:20px;
+
+} 
+
       body #wrapper div#helptext a {
         color: #E56500;
         text-decoration: none; }
+
         body #wrapper div#helptext a:hover {
           color: orange; }
+
     body #wrapper h1 {
-      position: relative;
+       position: relative;
+
       width: 891px;
-      font-size: 1.7em;
-      font-weight: bold;
-      padding: 6px 20px 6px 70px;
+      letter-spacing: -2px;
+      word-spacing: 10px;
+    font-size:50px;
+    line-height: 1;
+      padding: 20px 20px 6px 70px;
       margin: 0px 10px 10px -20px;
-      color: #555;
-      background-color: #999;
-      text-shadow: 0px 1px 2px #bbb;
-      -webkit-box-shadow: 0px 2px 4px #888;
-      -moz-box-shadow: 0px 2px 4px #888;
-      box-shadow: 0px 2px 4px #888; }
+      font-weight:600;
+      color: #111;
+      font-family:Georgia;
+      letter-spacing: -0.05em;
+     }
+/*
       body #wrapper h1:after {
         content: ' ';
         position: absolute;
@@ -42,6 +55,8 @@ body {
         border-width: 5px 10px;
         border-style: solid;
         border-color: #666 #666 transparent transparent; }
+
+
       body #wrapper h1:before {
         content: ' ';
         position: absolute;
@@ -52,22 +67,40 @@ body {
         border-width: 20px 10px;
         border-style: solid;
         border-color: #999 #999 #999 transparent; }
+*/
+
     body #wrapper h2 {
       padding: 3px 10px;
-      background: #E56500;
-      color: white;
-      border-top: 2px solid whitesmoke;
-      border-bottom: 2px solid whitesmoke; }
+      color: #111;
+      text-align:left;
+      border-bottom: 1px solid #CCC; 
+      margin:5px 10px;
+      font-size:28px;
+      font-weight:normal;
+    }
+
     body #wrapper div.year {
-      padding: 0px 30px; }
+      padding: 10px 30px;
+
+       }
+    body .wrap-grey{
+     background: #EEE;;
+     padding-top:30px;
+     margin-top:5px;
+    }
       body #wrapper div.year div.issue {
         text-align: center;
         padding: 0px 30px;
-        float: left;
-        width: 110px; }
+        float:left;
+        width: 110px; 
+        text-align:center;
+      }
+
         body #wrapper div.year div.issue img.thumbnail {
           display: inline-block;
-          height: 142px; }
+          height: 142px; 
+        }
+
         body #wrapper div.year div.issue .button {
           position: relative;
           margin-top: 5px;
